src/scss/1_components/cover/_cover.scss
.cover {
  min-height: 100%;
  padding-top: 1.2em;
  padding-left: 1.2em;
  padding-right: 0.4em;

  background: $color-light url("../img/bg-noise-300x300.png") repeat;
  overflow: hidden;

  font-family: $main-family; 

  @supports (display: grid) {
    display: grid;
    grid: "title lang" 2.625em
          "slogan navigation" auto
          "contacts logo" 7.5em
          / auto 2em;
    grid-gap: 0 0;
  }

  &__title {
    grid-area: title;
    margin-bottom: 1.25em;
  }

  &__lang {
    grid-area: lang;
  }

  &__slogan {
    grid-area: slogan;
    min-width: 0; // fixes grid overflow
    margin-bottom: 0.25em;
    padding-right: 1rem;
  }

  &__navbar {
    grid-area: navigation;
    margin-bottom: 1em;
  }

  &__contacts {
    grid-area: contacts;
    padding: 0;
    margin-bottom: 2em;
    list-style: none;

    @supports (display: grid) {
      align-self: start;
      margin-bottom: 3.25em;
    }

    &link {
      display: inline-block;
      margin-left: 0;
      margin-right: 1em;
      margin-top: 0em;
      margin-bottom: 1em;
    }
  }

  &__logo {
    grid-area: logo;
    padding: 1.2em 0;
    opacity: 0.5;
    color: $text-color-black;
    fill: $text-color-black;
    transition: 
      opacity $mouse-out, 
      color $mouse-out,
      fill $mouse-out;

    &:hover,
    &:focus {
      opacity: 1;
      color: $color-main;
      fill: $color-main;
      transition: 
        opacity $mouse-in,
        color $mouse-in, 
        fill $mouse-in;
    }
  }
}

